--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email: craig.r.shenton@googlemail.com
   facebook:
   flickr:
-  github: github.com/craigrshenton
+  github: craigrshenton
   instagram:
-  linkedin: linkedin.com/in/craigrshenton
+  linkedin: craigrshenton
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
